Use correct encoding string for locale XML export

Long-standing bug that seems to have been exposed by more strict recent
libxml2 updates.

The qt documentation actually warns against creating the declaration as
a processing instruction. Eventually, Tellico probably needs to just
assume UTF-8  everywhere.
BUG: 512581
FIXED-IN: 4.2